added successfull students

--- a/index.html
+++ b/index.html
@@ -199,6 +199,95 @@
                 </div>
             </div>
         </section>
+        <!-- courses info  -->
+        <section class="container py-5">
+            <div class="d-flex">
+                <div>
+                    <img class="h-70" src="images/working.png" alt="">
+                </div>
+                <div class="py-5 m-5">
+                    <h2>Boost your learning with Duolingo Plus</h2>
+                    <p>Make your breaks and commutes more productive with our iPhone and Android apps. Download them and see why Apple and Google gave us their highest accolades.Free teacher tools to help students learn languages through the Duolingo app, both in and out of the classroom.</p>
+                    <div class="d-flex justify-content-between">
+                        <div> <h2>3.2k+</h2> <p>Online courses</p> </div>
+                        <div> <h2>600+</h2> <p>Expert Member</p> </div>
+                        <div> <h2>1k+</h2> <p>Rating & review</p> </div>
+                    </div>
+                    <button class="btn btn-primary fw-bold" type="submit">Read More</button>
+
+                </div>
+            </div>
+
+        </section>
+        <!-- model box  -->
+        <section class="container py-5">
+            <div class="bg-info d-flex justify-content-between py-5 ps-2 border rounded" >
+                 <div> <h2>Ready to join</h2> <p>please join us our online courses   and i think better chance to better carrer.</p> </div>
+
+                 <div class="pt-4 pe-5">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Registration Now
+                         </button>
+  
+                        <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                             <div class="modal-content">
+                                <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Ready to Join</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Our courses effectively and efficiently teach courses related more information and programming language!
+                                        </div>
+                                 <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                 <button type="button" class="btn btn-primary">Save changes</button>
+                               </div>
+                            </div>
+                          </div>
+                       </div>
+
+                    </div>
+
+                </div>
+            
+        </section>
+        <!-- successfull students  -->
+        <section class="container py-5">
+            <div class="">
+                <div>
+                    <h2>Our successfull students please meet</h2>
+                    <p>If tech is a gold mine, Computer Science is your shovel. Fortunately, this Path teaches you college-level fundamentals, <br>  so you can start thinking and coding like a professional in no time.</p>
+                </div>
+                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+                    <div class="g-2">
+                        <img src="images/student/student-1.png" alt="">
+                        <h3>Alex heals</h3>
+                        <p>UIUX Design</p>
+                    </div>
+                    <div>
+                        <img src="images/student/student-2.png" alt="">
+                        <h3>Farhana khan</h3>
+                        <p>Motion Design</p>
+                    </div>
+                    <div>
+                        <img src="images/student/student-3.png" alt="">
+                        <h3>Sayed khan</h3>
+                        <p>Graphics Design</p>
+                    </div>
+                    <div>
+                        <img src="images/student/student-4.png" alt="">
+                        <h3>juma khan</h3>
+                        <p>Web Design</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="btn btn-primary fw-bold" type="submit">View All</button>
+                </div>
+            </div>
+        </section>
 
     </main>
 
