--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
         <!-- successfull students  -->
         <section class="container py-5">
             <div class="">
-                <div>
-                    <h2>Our successfull students please meet</h2>
-                    <p>If tech is a gold mine, Computer Science is your shovel. Fortunately, this Path teaches you college-level fundamentals, <br>  so you can start thinking and coding like a professional in no time.</p>
+                <div class="text-center">
+                    <h2 class="fw-bold fs-2">Our successfull students <br> please meet</h2>
+                    <p>If tech is a gold mine, Computer Science is your shovel. Fortunately, <br> this Path teaches you college-level fundamentals, <br>  so you can start thinking and coding like a professional in no time.</p>
                 </div>
                 <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
-                    <div class="g-2">
+                    <div class="">
                         <img src="images/student/student-1.png" alt="">
                         <h3>Alex heals</h3>
                         <p>UIUX Design</p>
@@ -283,10 +283,47 @@
                         <p>Web Design</p>
                     </div>
                 </div>
-                <div>
+                <div class="text-center py-3">
                     <button class="btn btn-primary fw-bold" type="submit">View All</button>
                 </div>
             </div>
+        </section>
+        <!-- Feedback  -->
+        <section class="container fy-5">
+          <div>
+            <div class="text-center">
+              <h2 class="fs-2 fw-bold">Some students <br> Feedback</h2>
+              <p>An introduction to programming, great course for any code beginner. Lecturer is doing amazing job <br> and keeping the lectures interesting, easy and understandable.</p>
+            </div>
+            <div>
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <p class="card-text">For a total beginner in coding, this course was the perfect start! It was easy to understand, and easy to program Thank you so much for offering such a wonderful way to learn!</p>
+                      <div class="text-center">
+                        <img src="images/student/student-5.png" alt="">
+                        <h3>Mark hanrry</h3>
+                        <p>Ui/ux design</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <p class="card-text">Honestly, I think Scratch, the programming tool used here, is better left for kids. This is a great tool to give kids an idea about programming and to get them interested.</p>
+                      <div class="text-center">
+                        <img src="images/student/student-6.png" alt="">
+                        <h3>halena</h3>
+                        <p>Graphics design</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
     </main>
