--- a/index.html
+++ b/index.html
@@ -380,6 +380,20 @@
             </div>
           </div>
         </section>
+        <!-- trusted companies  -->
+        <section class="container py-5">
+          <div>
+            <div class="text-center py-4"><h1 class="fw-bold fs-2">Trusted by over 800+ companies</h1></div>
+            <div class="d-flex justify-content-evenly">
+              <div><img src="images/company/company-1.png" alt=""></div>
+              <div><img src="images/company/company-2.png" alt=""></div>
+              <div><img src="images/company/company-3.png" alt=""></div>
+              <div><img src="images/company/company-4.png" alt=""></div>
+              <div><img src="images/company/company-5.png" alt=""></div>
+              <div><img src="images/company/company-6.png" alt=""></div>
+            </div>
+          </div>
+        </section>
 
     </main>
 
