--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-block">
                       <h5 class="fs-1 fw-bold text-dark">The Free, Fun and Effective <br> way to learn a language</h5>
                       <p class="fs-6 fw-bold text-white">We make it easy to form a habit of language learning,<br> with game-like features, fun challenges, <br> and reminders from our friendly mascot, Duo the owl.</p>
                       <button class="btn btn-primary fw-bold" type="submit">Get Started</button>
@@ -201,11 +201,11 @@
         </section>
         <!-- courses info  -->
         <section class="container py-5">
-            <div class="d-flex">
-                <div>
-                    <img class="h-70" src="images/working.png" alt="">
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="images/working.png" alt="">
                 </div>
-                <div class="py-5 m-5">
+                <div class="py-5 col-md-6 ">
                     <h2>Boost your learning with Duolingo Plus</h2>
                     <p>Make your breaks and commutes more productive with our iPhone and Android apps. Download them and see why Apple and Google gave us their highest accolades.Free teacher tools to help students learn languages through the Duolingo app, both in and out of the classroom.</p>
                     <div class="d-flex justify-content-between">
@@ -262,7 +262,8 @@
                     <p>If tech is a gold mine, Computer Science is your shovel. Fortunately, <br> this Path teaches you college-level fundamentals, <br>  so you can start thinking and coding like a professional in no time.</p>
                 </div>
                 <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
-                    <div class="">
+                    
+                      <div class="">
                         <img src="images/student/student-1.png" alt="">
                         <h3>Alex heals</h3>
                         <p>UIUX Design</p>
@@ -382,7 +383,7 @@
         </section>
         <!-- trusted companies  -->
         <section class="container py-5">
-          <div>
+          <div class="d-none d-lg-block">
             <div class="text-center py-4"><h1 class="fw-bold fs-2">Trusted by over 800+ companies</h1></div>
             <div class="d-flex justify-content-evenly">
               <div><img src="images/company/company-1.png" alt=""></div>
@@ -402,16 +403,16 @@
         <h2 class="fw-bold fs-2 text-white">Duolingo</h2>
         <p class="text-white">Office 40, Moshara Hossain Chittagong <br>Web developer <br> privacy and policy | terms of use</p>
         <div class="d-flex justify-content-center">
-          <div> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook text-white fw-bold" viewBox="0 0 16 16">
+          <div> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook text-white fw-bold mx-3" viewBox="0 0 16 16">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
           </svg></a> </div>
-          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok text-white fw-bold" viewBox="0 0 16 16">
+          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok text-white fw-bold mx-3" viewBox="0 0 16 16">
             <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z"/>
           </svg></a></div>
-          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin text-white fw-bold" viewBox="0 0 16 16">
+          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin text-white fw-bold mx-3" viewBox="0 0 16 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg></a></div>
-          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter text-white fw-bold" viewBox="0 0 16 16">
+          <div><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter text-white fw-bold mx-3" viewBox="0 0 16 16">
             <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
           </svg></a></div>
         </div>
