--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         </section>
         <!-- model box  -->
         <section class="container py-5">
-            <div class="bg-info d-flex justify-content-between py-5 ps-2 border rounded" >
-                 <div> <h2>Ready to join</h2> <p>please join us our online courses   and i think better chance to better carrer.</p> </div>
+            <div class="bg-success d-flex justify-content-between py-5 ps-2 border rounded" >
+                 <div> <h2 class="fw-bold text-white fs-1">Ready to join</h2> <p class="fw-bold text-white">please join us our online courses   and i think better chance to better carrer.</p> </div>
 
                  <div class="pt-4 pe-5">
                     <!-- Button trigger modal -->
