--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
+     <!-- css link  -->
+     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
+    <!-- header  -->
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
@@ -56,25 +60,25 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 filter carousel-itm rounded" alt="...">
                     <div class="carousel-caption d-block">
-                      <h5 class="fs-1 fw-bold text-dark">The Free, Fun and Effective <br> way to learn a language</h5>
-                      <p class="fs-6 fw-bold text-white">We make it easy to form a habit of language learning,<br> with game-like features, fun challenges, <br> and reminders from our friendly mascot, Duo the owl.</p>
+                      <h5 class="fs-1 fw-bold text-white" > The programming language <br> online courses.</h5>
+                      <p class="fw-bold text-white">We make it easy to form a habit of programming language learning,</p>
                       <button class="btn btn-primary fw-bold" type="submit">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="fs-1 fw-bold text-dark">The Free, Fun and Effective <br> way to learn a language</h5>
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 filter carousel-itm rounded" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="fs-1 fw-bold text-white">The Free, Fun and Effective <br> way to learn a language</h5>
                         <p class="fs-6 fw-bold text-white">We make it easy to form a habit of language learning,<br> with game-like features, fun challenges, <br> and reminders from our friendly mascot, Duo the owl.</p>
                         <button class="btn btn-primary fw-bold" type="submit">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="fs-1 fw-bold text-dark">The Free, Fun and Effective <br> way to learn a language</h5>
+                    <img src="images/cover/cover-1.png" class="d-block w-100 filter carousel-itm rounded" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="fs-1 fw-bold text-white">The Free, Fun and Effective <br> way to learn a language</h5>
                         <p class="fs-6 fw-bold text-white">We make it easy to form a habit of language learning,<br> with game-like features, fun challenges, <br> and reminders from our friendly mascot, Duo the owl.</p>
                         <button class="btn btn-primary fw-bold" type="submit">Get Started</button>
                     </div>
@@ -106,7 +110,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -120,7 +124,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -135,7 +139,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -150,7 +154,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -165,7 +169,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -180,7 +184,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4">
-                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            <img class="w-100" src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -361,7 +365,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    What is a css box Modal?
+                    What is a css box Model?
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
